--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@mui/icons-material": "^6.0.2",
     "@mui/material": "^6.0.2",
     "axios": "^1.7.7",
+    "js-cookie": "^3.0.5",
     "mongodb": "^6.8.0",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-lottie": "^1.2.4",
-    "simple-peer": "^9.11.1"
+    "simple-peer": "^9.11.1",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
+    "wordle-clone": "file:"
   },
   "devDependencies": {
     "@types/node": "^20",
